# agent-skills

./: .gitignore  README.md
devops/patchmon-api/: README.md  SKILL.md  pyproject.toml
devops/patchmon-api/references/: discrepancies.md  endpoints.md  output-format.md  patch-status-format.md
devops/patchmon-api/scripts/: live-smoke.sh  patchmon.py  screenshot.js
devops/patchmon-api/src/patchmon/: __init__.py  auth.py  cache.py  cli.py  client.py  exceptions.py  models.py  utils.py
devops/patchmon-api/tests/: conftest.py  test_client_async.py  test_smoke.py  test_token_cache.py
productivity/upload-to-microbin/: README.md  SKILL.md
productivity/upload-to-microbin/scripts/: microbin-upload.sh
productivity/upload-to-microbin/tests/: test_upload.sh
