[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patchmon"
version = "2.0.0"
description = "Thin async client for the PatchMon Application + Integration APIs"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = [
    "httpx[http2]>=0.27",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
patchmon = "patchmon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --tb=short"